PROJECT(WINUtil)

SET(QT_VERSION 5)
SET(REQUIRED_LIBS Core Widgets)
SET(REQUIRED_LIBS_QUALIFIED Qt${QT_VERSION}::Core Qt${QT_VERSION}::Widgets)

AUX_SOURCE_DIRECTORY(. SRC)
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC})

FIND_PACKAGE(Qt${QT_VERSION} COMPONENTS ${REQUIRED_LIBS} REQUIRED)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${REQUIRED_LIBS_QUALIFIED})