PROJECT(XUtil)

SET(QT_VERSION 5)
SET(REQUIRED_LIBS Core Widgets)
SET(REQUIRED_LIBS_QUALIFIED Qt${QT_VERSION}::Core Qt${QT_VERSION}::Widgets)
IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
    SET(REQUIRED_LIBS ${REQUIRED_LIBS} X11Extras)
    SET(REQUIRED_LIBS_QUALIFIED ${REQUIRED_LIBS_QUALIFIED} Qt${QT_VERSION}::X11Extras)
    #x11链接
    FIND_PACKAGE(X11 REQUIRED)
    LINK_LIBRARIES(${X11_LIBRARIES})
    LINK_DIRECTORIES(${X11_INCLUDE_DIR})
ENDIF()

AUX_SOURCE_DIRECTORY(. SRC)
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC})

FIND_PACKAGE(Qt${QT_VERSION} COMPONENTS ${REQUIRED_LIBS} REQUIRED)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${REQUIRED_LIBS_QUALIFIED})